# Game-of-Life-in-Rust

./: .gitignore  Cargo.toml  README.md  _config.yml
.github/workflows/: deploy-to-gh-pages.yml
gh-pages/: index.html
gh-pages/css/: styles.css
gh-pages/patterns/: acorn.txt  die-hard.txt  glider.txt  hwss.txt  lwss.txt  mwss.txt  the-r-pentomino.txt
src/: main.rs
src/game/: board.rs  cell.rs  cell_state.rs  game_state.rs  mod.rs  rules.rs
src/game_view/: mod.rs
src/view/: game_view_trait.rs  mod.rs
src/view/desktop/: game_view.rs  mod.rs  piston_game_view.rs
src/view/web/: game_view.rs  js.rs  mod.rs  util.rs  wasm_game_view.rs
src/views/: mod.rs
src/views/desktop/: mod.rs  piston_game_view.rs
src/views/web/: wasm_game_view.rs
wasm/: index.html
