[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"

web-sys = { version = "0.3.67", features = ["HtmlCanvasElement", "Window", "Response", "CanvasRenderingContext2d",
    "Performance", "Document"
] }

[dependencies.getrandom]
version = "0.2.12"
features = ["js"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
piston_window = "0.131.0"
piston2d-graphics = "0.44.0"
piston2d-opengl_graphics = "0.84.0"






